--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -96,10 +96,8 @@ if (DOWNLOAD_FILECHECK_SOURCE)
   add_executable(FileCheck
     ${FILECHECK_SRC_FILE}
   )
-  klee_get_llvm_libs(FILECHECK_NEEDED_LIBS Support)
-  target_include_directories(FileCheck PRIVATE ${KLEE_COMPONENT_EXTRA_INCLUDE_DIRS})
-  target_compile_options(FileCheck PRIVATE ${KLEE_COMPONENT_CXX_FLAGS})
-  target_compile_definitions(FileCheck PRIVATE ${KLEE_COMPONENT_CXX_DEFINES})
+  llvm_map_components_to_libnames(FILECHECK_NEEDED_LIBS support)
+  target_include_directories(FileCheck PRIVATE ${LLVM_INCLUDE_DIRS})
   target_link_libraries(FileCheck PRIVATE ${FILECHECK_NEEDED_LIBS})
 endif()
 
@@ -119,10 +117,8 @@ if (DOWNLOAD_NOT_SOURCE)
   add_executable("not"
     ${NOT_SRC_FILE}
   )
-  klee_get_llvm_libs(NOT_NEEDED_LIBS Support)
-  target_include_directories("not" PRIVATE ${KLEE_COMPONENT_EXTRA_INCLUDE_DIRS})
-  target_compile_options("not" PRIVATE ${KLEE_COMPONENT_CXX_FLAGS})
-  target_compile_definitions("not" PRIVATE ${KLEE_COMPONENT_CXX_DEFINES})
+  llvm_map_components_to_libnames(NOT_NEEDED_LIBS support)
+  target_include_directories("not" PRIVATE ${LLVM_INCLUDE_DIRS})
   target_link_libraries("not" PRIVATE ${NOT_NEEDED_LIBS})
 endif()
 
