--- a/tools/ktest-gen/CMakeLists.txt
+++ b/tools/ktest-gen/CMakeLists.txt
@@ -13,5 +13,6 @@ add_executable(ktest-gen
 set(KLEE_LIBS kleeBasic)
 
 target_link_libraries(ktest-gen ${KLEE_LIBS})
+target_include_directories(ktest-gen PRIVATE ${KLEE_INCLUDE_DIRS})
 
 install(TARGETS ktest-gen RUNTIME DESTINATION bin)
