--- a/tools/kleaver/CMakeLists.txt
+++ b/tools/kleaver/CMakeLists.txt
@@ -10,10 +10,14 @@ add_executable(kleaver
   main.cpp
 )
 
-set(KLEE_LIBS
-  kleaverSolver
-)
+llvm_map_components_to_libnames(llvm_libs core support)
 
-target_link_libraries(kleaver ${KLEE_LIBS})
+target_link_libraries(kleaver kleaverSolver ${llvm_libs})
+target_include_directories(kleaver PRIVATE ${KLEE_INCLUDE_DIRS} ${LLVM_INCLUDE_DIRS})
+target_compile_options(kleaver PRIVATE ${KLEE_COMPONENT_CXX_FLAGS})
+target_compile_definitions(kleaver PRIVATE ${KLEE_COMPONENT_CXX_DEFINES})
+
+target_compile_definitions(kleaver PRIVATE ${KLEE_COMPONENT_CXX_DEFINES})
+
 
 install(TARGETS kleaver RUNTIME DESTINATION bin)
