Explicitly check if 32bit support is enabled for testing
Ignore test in the first place, if no 32bit is enabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -430,8 +430,14 @@ message(STATUS "KLEE_RUNTIME_BUILD_TYPE: ${KLEE_RUNTIME_BUILD_TYPE}")
 include(CheckCSourceRuns)
 cmake_push_check_state()
 set(CMAKE_REQUIRED_FLAGS "-m32")
-check_c_source_runs("int main(int argc, char** argv){return 0;}" M32_SUPPORTED)
+check_c_source_runs("int main(int argc, char** argv){return 0;}" CHECK_M32_SUPPORT)
 cmake_pop_check_state()
+if (NOT CHECK_M32_SUPPORT)
+  set(M32_SUPPORTED 0)
+else()
+  set(M32_SUPPORTED 1)
+endif()
+
 message(STATUS "32bit platform supported: ${M32_SUPPORTED}")
 
 set(KLEE_INSTALL_RUNTIME_DIR "${CMAKE_INSTALL_FULL_LIBDIR}/klee/runtime")
