--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -224,6 +224,10 @@ if 'WSL_DISTRO_NAME' in os.environ and 'WSL_INTEROP' in os.environ:
 else:
   config.available_features.add('not-wsl-2')
 
+# m32 support
+config.available_features.add('{}32bit-support'.format('' if config.have_32bit_support else 'not-'))
+
+
 # Sanitizer
 config.available_features.add('{}asan'.format('' if config.have_asan else 'not-'))
 config.available_features.add('{}ubsan'.format('' if config.have_ubsan else 'not-'))
