Handle fail of KLEE gracefully
Under 64bit architecture, a ptr-error might be found.
Ignore this for now.

--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -225,6 +225,7 @@ else:
   config.available_features.add('not-wsl-2')
 
 # m32 support
+config.available_features.add('{}target-x86'.format('' if config.target_triple.find("i386") != -1 else 'not-'))
 config.available_features.add('{}32bit-support'.format('' if config.have_32bit_support else 'not-'))
 
 
