--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -56,7 +56,7 @@ if klee_obj_root is not None:
   config.environment['PATH'] = path
 
 
-# Propogate some environment variable to test environment.
+# Propagate some environment variable to test environment.
 def addEnv(name):
   if name in os.environ:
     config.environment[name] = os.environ[name]
