[cmake] implement USE_MAP to support single LLVM library
Otherwise we see:
: && /var/lib/build/ccache/bin/clang++ -O2 -Wall ... test-randgen.cpp.o -o bin/ktest-randgen  lib/libkleeBasic.a  -lLLVMSupport && :
 /usr/bin/ld: cannot find -lLLVMSupport: No such file or directory

Fixes #1581.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -727,3 +727,11 @@ add_custom_target(uninstall
   COMMENT "Uninstalling..."
   VERBATIM
 )
+
+set(USE_MAP FALSE)
+if (TARGET LLVMSupport)
+	get_target_property(LLVMSupport_TYPE LLVMSupport TYPE)
+	if (LLVMSupport STREQUAL SHARED_LIBRARY)
+		set(USE_MAP TRUE)
+	endif()
+endif()
