--- a/lib/Basic/CMakeLists.txt
+++ b/lib/Basic/CMakeLists.txt
@@ -11,7 +11,12 @@ add_library(kleeBasic
   Statistics.cpp
 )
 
-llvm_map_components_to_libnames(llvm_libs support)
+if (USE_MAP)
+	llvm_map_components_to_libnames(llvm_libs support)
+else()
+	set(llvm_libs LLVM)
+endif()
+
 target_link_libraries(kleeBasic PRIVATE ${llvm_libs})
 target_compile_options(kleeBasic PRIVATE ${KLEE_COMPONENT_CXX_FLAGS})
 target_compile_definitions(kleeBasic PRIVATE ${KLEE_COMPONENT_CXX_DEFINES})
