Change `llvm_map_components_to_libnames` to `llvm_config` CMake function
With recent LLVM versions, this should allow to link against dynamic LLVM
libraries.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,6 +185,11 @@ if (NOT EXISTS "${LLVM_AS}")
   message(FATAL_ERROR "Failed to find llvm-as at \"${LLVM_AS}\"")
 endif()
 
+# Check for dynamic linking
+if (LLVM_LINK_LLVM_DYLIB)
+  set(USE_LLVM_SHARED USE_SHARED)
+endif()
+
 ################################################################################
 # C++ version
 ################################################################################
