[feat] Add parser for .sarif files and python scripts for work with .sarif files

--- a/lib/Module/CMakeLists.txt
+++ b/lib/Module/CMakeLists.txt
@@ -28,6 +28,7 @@ set(KLEE_MODULE_COMPONENT_SRCS
   Target.cpp
   TargetHash.cpp
   TargetForest.cpp
+  SarifReport.cpp
 )
 
 if (USE_WORKAROUND_LLVM_PR39177)
