--- a/lib/Core/CMakeLists.txt
+++ b/lib/Core/CMakeLists.txt
@@ -28,6 +28,7 @@ klee_add_component(kleeCore
   SpecialFunctionHandler.cpp
   StatsTracker.cpp
   TargetCalculator.cpp
+  TargetedExecutionReporter.cpp
   TargetedExecutionManager.cpp
   TimingSolver.cpp
   TypeManager.cpp
