config.h: include FSTATAT_PATH_ACCEPTS_NULL
This variable was introduced by d2f5906da4ae37a41ae257e5308d50e19689877b
but not included in `config.h` before. As a result `#ifdef` would always
fail. Moving the code is necessary to set the variable before `config.h`
is created using `configure_file()` in CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -405,11 +405,15 @@ else()
   set(HAVE_SELINUX 0)
 endif()
 
+try_compile (FSTATAT_PATH_ACCEPTS_NULL
+  ${CMAKE_BINARY_DIR}
+  ${PROJECT_SOURCE_DIR}/cmake/fstatat.c
+)
+
 ################################################################################
 # KLEE runtime support
 ################################################################################
 # This is set here and not in `runtime` because `config.h` needs to be generated.
-
 
 set(available_klee_runtime_build_types
   "Release"
