[feat] Add `TargetManager` [feat] Rework `TargetedSearcher` and `GuidedSearcher`
[refactor] Refine the target's system

--- a/lib/Core/CMakeLists.txt
+++ b/lib/Core/CMakeLists.txt
@@ -30,6 +30,7 @@ add_library(kleeCore
   TargetCalculator.cpp
   TargetedExecutionReporter.cpp
   TargetedExecutionManager.cpp
+  TargetManager.cpp
   TimingSolver.cpp
   TypeManager.cpp
   UserSearcher.cpp
